<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPrimo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#784E29"
                android:text="@string/tvPrimo"
                android:textAlignment="center"
                android:textColor="#F1EBEB"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgPrimo"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                app:srcCompat="@drawable/primo" />

            <Switch
                android:id="@+id/swPrimo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#026739"
                android:text="@string/swParImparEncender"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textoValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPar"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etValor"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:ems="10"
                android:hint="10"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/bComprobar"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="10dp"
                android:backgroundTint="#784E29"
                android:onClick="esPrimo"
                android:text="@string/btComprobar" />

            <TextView
                android:id="@+id/tvComprobar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvComprobar"
                android:textAlignment="center" />

            <Button
                android:id="@+id/bVolverPrimo"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:backgroundTint="#784E29"
                android:onClick="volverPrimo"
                android:text="@string/btVolverPart" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView6"
                android:name="com.example.appalba.Fragment_publicidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_publicidad" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>