<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etValor1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParImparActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-89dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvParImpar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#E57E22"
                android:text="@string/tvParImpar"
                android:textAlignment="center"
                android:textColor="#FFFAFB"
                android:textSize="24sp"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imgodd"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                app:srcCompat="@drawable/descarga" />

            <Switch
                android:id="@+id/swEncendida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/teal_700"
                android:minHeight="48dp"
                android:text="@string/swParImparEncender"
                android:textAlignment="center"
                android:textOff="Par o impar apagado"
                android:textOn="Par o impar encendido" />

            <TextView
                android:id="@+id/textoValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvPar"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/etValor1Par"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="10"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/bCalcular"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E47E22"
                android:onClick="esParImpar"
                android:text="@string/btComprobar" />

            <TextView
                android:id="@+id/tvComprobar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvComprobar"
                android:textAlignment="center" />

            <Button
                android:id="@+id/bVolverParImpar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_margin="10dp"
                android:backgroundTint="#E47E22"
                android:onClick="volverParImpar"
                android:text="@string/btVolverPart" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView4"
                android:name="com.example.appalba.Fragment_publicidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_publicidad" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>