<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/etBienvenidaTest"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="#E41F40"
                android:padding="8dp"
                android:text="@string/etiquetaBienvenidaTest"
                android:textAlignment="center"
                android:textColor="#F3F1F1"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOpciones"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="70dp"
                    android:layout_weight="50"
                    android:text="@string/tvOpciones"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imagenAplicacion"
                    android:layout_width="185dp"
                    android:layout_height="97dp"
                    android:layout_weight="25"
                    android:scaleType="centerInside"
                    android:visibility="visible"
                    app:srcCompat="@drawable/movil"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonCalculadora"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abrirCalculadora"
                    android:text="@string/buttonCalculadora" />

                <Button
                    android:id="@+id/buttonParImpar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abrirParImpar"
                    android:text="@string/buttonParImpar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_weight="50"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonNumeroPrimo"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abrirPrimo"
                    android:text="@string/buttonNumeroPrimo" />

                <Button
                    android:id="@+id/buttonTest"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abrirTest"
                    android:text="Test" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btAcerca"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abrirAcercaDe"
                    android:text="@string/btAcerca" />

                <Button
                    android:id="@+id/btAleatorio"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="abirNaleatorio"
                    android:text="@string/btAleatorio" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:ems="10"
                    android:hint="@string/etNombreMain"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonSalir"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:backgroundTint="#E41F40"
                    android:backgroundTintMode="add"
                    android:onClick="salir"
                    android:text="@string/buttonSalir" />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView3"
                android:name="com.example.appalba.Fragment_publicidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_publicidad" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>