<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_aleatorio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvBienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#E97194"
                android:padding="10dp"
                android:text="@string/tvBienvenidaAleatorio"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/imgaleatorio"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                app:srcCompat="@drawable/random" />

            <TextView
                android:id="@+id/tvEscoge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tvEscogeAleatorio"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUno"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/tvUno"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etUno"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tvDos"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvDos"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDos"
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <Button
                android:id="@+id/btDarAleatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#EA7195"
                android:onClick="numeroAleatorio"
                android:text="@string/btDarAleatorio" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTuNumero"
                    android:layout_width="219dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tvTuNumero"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAleatorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="0"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imbtSalir"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#E97194"
                android:contentDescription="@string/btVolverPart"
                android:minHeight="48dp"
                android:onClick="salir"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView2"
                android:name="com.example.appalba.Fragment_publicidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_publicidad" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>